# prestodb

./: master-connector.patch  pom.xml  progress.md  protocol-implementation-plan.md  protocol-v2-migration-design.md
docker/: Dockerfile
presto-accumulo/: pom.xml
presto-atop/: pom.xml
presto-benchmark-runner/: pom.xml
presto-bigquery/: pom.xml
presto-blackhole/: pom.xml
presto-cache/: pom.xml
presto-cassandra/: pom.xml
presto-clickhouse/: pom.xml
presto-client/: pom.xml
presto-delta/: pom.xml
presto-druid/: pom.xml
presto-elasticsearch/: pom.xml
presto-example-http/: pom.xml
presto-function-namespace-managers/: pom.xml
presto-hana/: pom.xml
presto-hdfs-core/: pom.xml
presto-hive/: pom.xml
presto-hive-alluxio/: pom.xml
presto-hive-common/: pom.xml
presto-hive-function-namespace/: pom.xml
presto-hive-hadoop2/: pom.xml
presto-hive-metastore/: pom.xml
presto-hudi/: pom.xml
presto-i18n-functions/: pom.xml
presto-iceberg/: pom.xml
presto-jdbc/: pom.xml
presto-jmx/: pom.xml
presto-kafka/: pom.xml
presto-kudu/: pom.xml
presto-lark-sheets/: pom.xml
presto-local-file/: pom.xml
presto-main/: pom.xml
presto-main-base/: pom.xml
presto-memory/: pom.xml
presto-ml/: pom.xml
presto-mongodb/: pom.xml
presto-mysql/: pom.xml
presto-native-execution/: pom.xml
presto-native-sidecar-plugin/: pom.xml
presto-open-telemetry/: pom.xml
presto-openapi/: pom.xml
presto-oracle/: pom.xml
presto-oxidized/: .gitignore  Cargo.toml  README.md  build.rs  pom.xml
presto-oxidized/prestox/: .gitignore  Cargo.toml  build.rs
presto-oxidized/prestox/src/: config.rs  connector.rs  discovery.rs  exec_resources.rs  lib.rs  resources.rs  spi.rs  substrait_converter.rs  task.rs
presto-oxidized/prestox/src/err/: error.rs
presto-oxidized/prestox/src/execution/: mod.rs  oxidize.rs
presto-oxidized/prestox/src/protocol/: impls.rs  mod.rs  page.rs  sql_type.rs
presto-oxidized/prestox/src/server/: api.rs
presto-oxidized/prestox/test-resources/: test-serialized-fragment-deserialized.json  test-serialized-fragment.txt  values-1.fragment.json
presto-oxidized/src/: discovery.rs  lib.rs  main.rs  resources.rs  task.rs
presto-oxidized/src/protocol/: impls.rs
presto-oxidized/src/server/: api.rs
presto-oxidized/src/test/java/com/facebook/presto/prestox/: PrestoXQueryRunner.java  TestBasicQueries.java
presto-password-authenticators/: pom.xml
presto-pinot/: pom.xml
presto-pinot-toolkit/: pom.xml
presto-postgresql/: pom.xml
presto-product-tests/: pom.xml
presto-prometheus/: pom.xml
presto-protocol/: pom.xml
presto-proxy/: pom.xml
presto-redis/: pom.xml
presto-redshift/: pom.xml
presto-resource-group-managers/: pom.xml
presto-router/: pom.xml
presto-singlestore/: pom.xml
presto-spark-base/: pom.xml
presto-spi/: pom.xml
presto-sqlserver/: pom.xml
(+280 files in other folders)
