[package]
name = "prestox"
version = "0.1.0"
edition = "2021"

[lib]
name = "prestox"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
env_logger = "0.11.0"
futures = "0.3.30"
log = "0.4.20"
num_cpus = "1.16.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["num_cpus", "parking_lot", "rt-multi-thread", "rt", "time", "mio", "macros"] }
uuid = { version = "1.7.0", features = ["rng", "serde", "v4"] }
