[package]
name = "prestox"
version = "0.1.0"
edition = "2021"

[lib]
name = "prestox"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/main.rs"

[[bin]]
name = "config-reference"
path = "src/bin/config-reference.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.77"
base64 = "0.21.7"
chrono = { version = "0.4.33", features = ["serde"] }
config = "0.13.4"
crossbeam-skiplist = "0.1.3"
env_logger = "0.11.0"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
num_cpus = "1.16.0"
ordered-float = { version = "4.2.0", features = ["serde"] }
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111"}
substrait = "0.24.0"
tokio = { version = "1.35.1", features = ["num_cpus", "parking_lot", "rt-multi-thread", "rt", "time", "mio", "macros"] }
uuid = { version = "1.7.0", features = ["rng", "serde", "v4"] }

[build-dependencies]
quote = "1.0.35"
syn = "2.0.48"
